--- a/src/assets/globalStyles/fonts.less
+++ b/src/assets/globalStyles/fonts.less
@@ -1,15 +1,15 @@
 @font-face {
-    font-family: "Montserrat";
+    font-family: "SF-Pro";
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     font-display: auto;
-    src: url(".././fonts/Montserrat-SemiBold.woff2") format("woff2"), url(".././fonts/Montserrat-SemiBold.woff") format("woff");
+    src: url(".././fonts/sf-pro-text-regular.woff2") format("woff2"), url(".././fonts/sf-pro-text-regular.woff") format("woff");
 }
   
 @font-face {
-    font-family: "Montserrat";
+    font-family: "SF-Pro";
     font-style: normal;
     font-weight: 700;
     font-display: auto;
-    src: url(".././fonts/Montserrat-Bold.woff2") format("woff2"), url(".././fonts/Montserrat-Bold.woff") format("woff");
+    src: url(".././fonts/sf-pro-text-bold.woff2") format("woff2"), url(".././fonts/sf-pro-text-bold.woff") format("woff");
 }
