--- a/src/assets/globalStyles/variables.less
+++ b/src/assets/globalStyles/variables.less
@@ -2,11 +2,10 @@
 @blue: #3B567D;
 @dark-blue: #1B365D;
 @darkest-blue: #0B264D;
+@light-gray: #f0f0f0;
+@gray: #A9A9A9;
 
-@light-white: #A2B3CD;
 @black: #000000;
 @red: #FF2E00;
 @yellow: #FFC907;
-@gray: #262626;
-@dark-gray: #161214;
-@light-gray: #A9A9A9;
+
