--- a/src/assets/globalStyles/styles.less
+++ b/src/assets/globalStyles/styles.less
@@ -20,7 +20,7 @@ html {
 body {
     display: grid;
     grid-template-rows: 1fr min-content;
-    font-family: "Montserrat", "Arial", sans-serif;
+    font-family: "SF-Pro", "Arial", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
