--- a/src/assets/globalStyles/variables.less
+++ b/src/assets/globalStyles/variables.less
@@ -1,11 +1,15 @@
-@white: #FFFFFF;
-@blue: #3B567D;
-@dark-blue: #1B365D;
-@darkest-blue: #0B264D;
+@white: #ffffff;
+@blue: #3b567d;
+@dark-blue: #1b365d;
+@darkest-blue: #0b264d;
 @light-gray: #f0f0f0;
-@gray: #A9A9A9;
+@gray: #a9a9a9;
+@dark-gray: #595959;
+@red: #df1e00;
+@dark-red: #aF2e00;
+
 
 @black: #000000;
-@red: #FF2E00;
-@yellow: #FFC907;
+
+@yellow: #ffc907;
 
